feat: Create CSV and attach to email about subscription notifications
[#OCD-4483]

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -339,6 +339,12 @@ complaintsReport.subject=Complaints Report
 complaintsReport.heading=Complaints Report
 complaintsReport.paragraph1.body=The report of all complaints is attached.
 
+#Subscription Observation Notifications Report
+subscriptionObservationNotificationsReport.filename=Subscription Observation Notifications Report
+subscriptionObservationNotificationsReport.subject=Subscription Observation Notifications Report
+subscriptionObservationNotificationsReport.heading=Subscription Observation Notifications Report
+subscriptionObservationNotificationsReport.paragraph1.body=The report of all notifications is attached.
+
 #Developer Missing Attestations Change Request Email
 developer.missingAttestationChangeRequest.subject=Semi-annual Attestations Not Submitted
 developer.missingAttestationChangeRequest.salutation=Hello,
