--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -50,6 +50,7 @@ product.notFound=Product not found.
 product.split.notAllowedMultipleAcbs=Product split involves multiple ONC-ACBs, which requires additional approval. Please contact ONC.
 product.doesNotExist=No product with ID %s exists in the system.
 product.nameRequired=A product name is required.
+product.duplicateName=A product with the name %s already exists for this developer. Duplicate product names are not allowed. If you believe this is incorrect please contact ONC.
 product.ownerRequired=A product owner is required.
 product.ownerMustExist=An owner with ID %s was specified for the product but that developer does not exist.
 product.ownerMustNotBeBannedOrSuspended=The product owner must not be banned or suspended. Currently, the product owner has a status of '%s'.
