feat!: Detect duplicate version names per product when editing versions
[#OCD-4641]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -60,6 +60,8 @@ product.ownerHistory.cannotTransferDevelopersOnlyProduct=%s has no other product
 
 #version errors
 version.notFound=Version not found.
+version.nameRequired=A version name is required.
+version.duplicateName=A version with the name %s already exists for this product. Duplicate version names are not allowed. If you believe this is incorrect please contact ONC.
 version.split.missingCode=A new version code is required.
 version.split.missingName=A new version name is required.
 version.split.missingNewListing=At least one listing to assign to the new version is required.
