feat!: Forgot password functionality for Cognito Users
OCD-4615

--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -318,6 +318,8 @@ cognito.userPoolClientSecret=SECRET
 cognito.clientId=SECRET
 cognito.tokenizezRsaKeyUrl=https://cognito-idp.%s.amazonaws.com/%s/.well-known/jwks.json
 cognito.environment.groupName=SECRET
+# Forgot passsword token is valid for x HOURS
+cognito.forgotPassword.tokenValid=1
 ##############################################
 
 ######  Dynamic Scheduling of Download Files     ######
