--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -328,7 +328,7 @@ listing.criteria.missingTestProcedure=Test procedures are required for certifica
 listing.criteria.conformanceMethodNotApplicable=Conformance Methods are not applicable for the criterion %s. They have been removed.
 listing.criteria.conformanceMethod.invalidCriteriaRemoved=Conformance Method "%s" is not valid for criteria %s. It has been removed.
 listing.criteria.conformanceMethod.invalidCriteriaReplaced=Conformance Method "%s" is not valid for criteria %s. It has been replaced with "%s".
-listing.criteria.conformanceMethod.addedDefaultForCriterion=Criterion %s requires a Conformance Method but none was found. "%s" was added.
+listing.criteria.conformanceMethod.addedDefaultForCriterion=Criteri%s %s require%s a Conformance Method but none was found. "%s" was added.
 listing.criteria.conformanceMethod.missingConformanceMethod=Conformance Methods are required for certification criteria %s.
 listing.criteria.conformanceMethod.missingConformanceMethodVersion=Conformance Method Version is required for certification %s with Conformance Method "%s".
 listing.criteria.conformanceMethod.unallowedConformanceMethodVersion=Conformance Method Version is not allowed for certification %s with Conformance Method "%s".
