--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -389,6 +389,7 @@ listing.criteria.testTasksNotApplicable=Test Tasks are not applicable for the cr
 listing.criteria.badTestTask=Could not process Test Task '%s'.
 listing.criteria.missingTestTask=Certification %s requires at least one test task.
 listing.criteria.missingTestTaskUniqueId=A test task for criteria %s is missing its unique ID.
+listing.criteria.duplicateTestTaskFriendlyId=The test task unique ID '%s' is a duplicate. Test task IDs must be unique across all tasks.
 listing.criteria.missingTestTaskCriteria=A test task with uniqueId %s has no associated criteria and will not be saved.
 listing.criteria.badTestTaskParticipantsSize=The test task %s for criteria %s requires at least 10 participants.
 listing.criteria.missingTestDescription=The test task %s for criteria %s requires a description.
@@ -420,6 +421,7 @@ listing.criteria.invalidTestTaskRatingStddev=The test task %s for criteria %s ha
 listing.criteria.badTestTaskNumber=An unrecognized character was found in Test Task "%s" "%s" "%s". The value must be only a numeric value. You can correct it within the field itself on the Edit Certified Product screen or modify it in the csv file and upload again.
 listing.criteria.roundedTestTaskNumber=A non-integer numeric number was found in Test Task "%s" "%s" "%s". The number has been rounded to "%s".
 listing.criteria.missingTestParticipantUniqueId=A test participant is missing its unique ID.
+listing.criteria.duplicateTestParticipantFriendlyId=The test participant unique ID '%s' is a duplicate. Test participant IDs must be unique across all participants.
 listing.criteria.missingParticipantAgeRange=Age range is required for participant %s but was not found.
 listing.criteria.invalidParticipantAgeRange=Age range %s for participant %s is an invalid value.
 listing.criteria.missingParticipantEducationLevel=Education level is required for participant %s but was not found.
