--- a/chpl/chpl-resources/src/main/resources/lookup.properties
+++ b/chpl/chpl-resources/src/main/resources/lookup.properties
@@ -311,7 +311,7 @@ criterion.170_315_g_2.headings=CRITERIA_170_315_G_2__C,CRITERIA_170_315_G_2_C
 criterion.170_315_g_3.headings=CRITERIA_170_315_G_3__C,CRITERIA_170_315_G_3_C
 criterion.170_315_g_4.headings=CRITERIA_170_315_G_4__C,CRITERIA_170_315_G_4_C
 criterion.170_315_g_5.headings=CRITERIA_170_315_G_5__C,CRITERIA_170_315_G_5_C
-criterion.170_315_g_6.headings=CRITERIA_170_315_G_6__C,CRITERIA_170_315_G_6_C
+criterion.170_315_g_6.headings=CRITERIA_170_315_G_6__C,CRITERIA_170_315_G_6_C,CRITERIA_170_315_G_6_Cures__C,CRITERIA_170_315_G_6_Cures_C
 criterion.170_315_g_6_old.headings=CRITERIA_170_315_G_6_Original__C,CRITERIA_170_315_G_6_Original_C
 criterion.170_315_g_6_cures.headings=CRITERIA_170_315_G_6__C,CRITERIA_170_315_G_6_C,CRITERIA_170_315_G_6_Cures__C,CRITERIA_170_315_G_6_Cures_C
 criterion.170_315_g_7.headings=CRITERIA_170_315_G_7__C,CRITERIA_170_315_G_7_C
