feat: send email to user when password has been updated
OCD-4657

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -429,3 +429,11 @@ cognito.forgotPassword.paragraph1=We have received a password change request for
 cognito.forgotPassword.paragraph2=Click <a href='%s'>here</a> to change your password.  This link is valid for 1 hour.
 cognito.forgotPassword.paragraph3=If the above link does not work for you, copy and paste the following into your browser's address bar:</br>%s 
 cognito.forgotPassword.paragraph4=If you didn't request a password change, you can ignore this message and continue to use your current password.
+
+#Cognito password changed email
+cognito.changePassword.subject=CHPL password updated
+cognito.changePassword.heading=CHPL Password Updated
+cognito.changePassword.paragraph1=Your CHPL account password has successfully been updated.
+cognito.changePassword.paragraph2=If you didn't change your password, please go to the <a href="%s">CHPL</a> \
+and click on Administrator Login and then Forgot Password or contact us by opening a ticket via the \
+<a href="%s">Health IT Feedback and Inquiry Portal</a> and choosing the "CHPL" category.
