refactor: update capitalization in email subject
OCD-4657

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -431,7 +431,7 @@ cognito.forgotPassword.paragraph3=If the above link does not work for you, copy 
 cognito.forgotPassword.paragraph4=If you didn't request a password change, you can ignore this message and continue to use your current password.
 
 #Cognito password changed email
-cognito.changePassword.subject=CHPL password updated
+cognito.changePassword.subject=CHPL Password Updated
 cognito.changePassword.heading=CHPL Password Updated
 cognito.changePassword.paragraph1=Your CHPL account password has successfully been updated.
 cognito.changePassword.paragraph2=If you didn't change your password, please go to the <a href="%s">CHPL</a> \
