refactor: activity type -> concept
[#OCD-4674]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -837,7 +837,7 @@ search.complaint.orderBy.invalid=Order by parameter '%s' is invalid. Value must 
 
 #activity search validation errors
 search.activity.activityDate.invalid=Could not parse '%s' as an activity date in the format %s.
-search.activity.invalidType=The activity type %s is not valid.
+search.activity.invalidConcept=The activity concept %s is not valid.
 
 #questionable activity search validation errors
 search.questionableActivity.activityDate.invalid=Could not parse '%s' as an activity date in the format %s.
