feat: add new job that will mark Cognito users as needing to reset their password
OCD-4659

--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -386,7 +386,13 @@ downloadActiveMinute=0
 updatedCriteriaStatusReportTemplate=UpdatedCriteriaStatusReport.xlsx
 ####################################
 
-
 ######    Power BI Report URLS     ######
 reportUrls={'UniqueProducts': 'ENVIRONMENT DEPENDENT'}
 #########################################
+
+######      Cognito Mass Require Change Password job     ######
+# Only users in this array will have their passwords force reset.  If the array is
+# empty, all users will have their password reset. Multiple users should be 
+# separated by commas (,) with no spaces.  
+cognitoMassRequirePasswordChangeJob.includedUsers=tmy1313@gmail.com,tmy1313+drummond@gmail.com
+###############################################################
