fix!: Display warning only for confmeth being defaulted
We were previously giving both an error and warning on listing edit but
only the warning is necessary.

[#OCD-4509]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -332,7 +332,7 @@ listing.criteria.conformanceMethodNotApplicable=Conformance Methods are not appl
 listing.criteria.conformanceMethod.invalidCriteriaRemoved=Conformance Method "%s" is not valid for criteria %s. It has been removed.
 listing.criteria.conformanceMethod.invalidCriteriaReplaced=Conformance Method "%s" is not valid for criteria %s. It has been replaced with "%s".
 listing.criteria.conformanceMethod.addedDefaultForCriterion=Criteri%s %s require%s a Conformance Method but none was found. "%s" was added.
-listing.criteria.conformanceMethod.missingConformanceMethod=Conformance Methods are required for certification criteria %s.
+listing.criteria.conformanceMethod.missingConformanceMethod=Conformance Methods are required for %s.
 listing.criteria.conformanceMethod.missingConformanceMethodVersion=Conformance Method Version is required for certification %s with Conformance Method "%s".
 listing.criteria.conformanceMethod.unallowedConformanceMethodVersion=Conformance Method Version is not allowed for certification %s with Conformance Method "%s".
 listing.criteria.conformanceMethod.unallowedConformanceMethodVersionRemoved=Conformance Method Version is not allowed for certification %s with Conformance Method "%s". The version "%s" has been removed.
