feat!: Add complaintTypes to Complaints.
At least one complaint type is required for any Complaint. Multiple
Complaint Types may be chosen. If complaint type "Other" is chosen then
text data further describing the type of complaint is required.

[#OCD-4487]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -940,6 +940,9 @@ complaints.create.acbRequired=Certification Body is required when creating a com
 complaints.complainantType.notExists=The Complainant Type does not exist.
 complaints.complainantType.required=Complainant Type is required.
 complaints.complainantType.otherMissing=When Complainant Type "Other" is selected, a description of "Other" is required.
+complaints.complaintType.required=Complaint Type is required.
+complaints.complaintType.notExists=The Complaint Type does not exist.
+complaints.complaintType.otherMissing=When Complaint Type "Other" is selected, a description of "Other" is required.
 complaints.receivedDate.required=Received Date is required.
 complaints.acbComplaintId.required=ONC-ACB Complaint Id is required.
 complaints.summary.required=Summary is required.
