feat: Add complaint type as searchable complaint field
[#OCD-4487]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -821,6 +821,7 @@ search.changeRequest.orderBy.invalid=Order by parameter '%s' is invalid. Value m
 search.complaint.acbId.doesNotExist=There is no ONC-ACB in the system with the ID '%s'.
 search.complaint.invalidBoolean=The value '%s' for search term '%s' cannot be interpreted as true or false.
 search.complaint.complainantType.invalid=The complainant type name '%s' is not valid.
+search.complaint.complaintType.invalid-The complaint type name '%s' is not valid.
 search.complaint.complaintStatus.invalid=The complaint status '%s' is not valid. Value must be one of %s.
 search.complaint.listingId.invalid=The listing ID '%s' is not a valid number.
 search.complaint.surveillanceId.invalid=The surveillance ID '%s' is not a valid number.
