--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -212,6 +212,9 @@ listing.shouldHaveXXXXCode=The CHPL Product Number has a developer code of '%s' 
 listing.missingProduct=A product name is required.
 listing.missingVersion=A product version is required.
 
+# product errors
+listing.product.fuzzyMatch=This listing has a product name of '%s', but the developer %s has a similarly named product '%s'. Should the listing belong to that product instead?
+
 # certification date errors
 listing.futureCertificationDate=Certification date occurs in the future.
 listing.certificationDateMissing=No certification date was found.
