--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -213,7 +213,7 @@ listing.missingProduct=A product name is required.
 listing.missingVersion=A product version is required.
 
 # product errors
-listing.product.fuzzyMatch=This listing has a product name of '%s', but the developer %s has a similarly named product '%s'. Should the listing belong to that product instead?
+listing.product.fuzzyMatch=This listing has a product name of '%s', but the developer %s has a similarly named product '%s'. Please review the product selection during confirmation.
 
 # certification date errors
 listing.futureCertificationDate=Certification date occurs in the future.
